--- a/app.json
+++ b/app.json
@@ -1,3 +1,13 @@
 {
-	"pages": ["pages/index/index"]
+  "pages": [
+    "pages/wxml/index",
+    "pages/index/index"
+  ],
+  "sitemapLocation": "sitemap.json",
+  "window":{
+    "backgroundTextStyle":"light",
+    "navigationBarBackgroundColor":"#ff0",
+    "navigationBarTitleText":"Mini Program",
+    "navigationBarTextStyle":"black"
+  }
 }
